@@ -1,3 +1,4 @@
+	* fix tail-padding for last file in create_torrent
 	* fix internal resolve links lookup for mutable torrents
 	* hint DHT bootstrap nodes of actual bootstrap request
 
